cluster/apps/pihole/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-proxy
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
      #nginx.ingress.kubernetes.io/modsecurity-snippet: |
      #SecRuleEngine On
spec:
  ingressClassName: nginx
  rules:
  - host: pihole.shpaq.org
    http:
      paths:
      - backend:
          service:
            name: pihole-proxy
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - pihole.shpaq.org
    secretName: pihole-shpaq-org-tls
